<resources>
    <string name="app_name">PolyDraw</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="avatar">Avatar</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="modify">Modify</string>
    <string name="restore_default">Restore Default</string>
    <string name="view_all">View all</string>
    <string name="confirm">Confirm</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_username_hint">Username</string>
    <string name="login_username_error">The username cannot be empty</string>
    <string name="login_password_hint">Password</string>
    <string name="login_reenter_password_hint">Confirm password</string>
    <string name="login_password_help">At least 8 characters</string>
    <string name="login_password_error">The password cannot be empty</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_button">Login</string>
    <string name="login_signup_question">Don\'t have an account?</string>
    <string name="login_signup_now">Sign up now!</string>
    <string name="register">Register</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="all_required">(All fields are required)</string>
    <string name="quit_app">Quit</string>
    <string name="quit_app_confirm">You are about to exit the application. Do you wish to continue?</string>
    <string name="profile">Profile</string>
    <string name="profile_info_title">Profile Information</string>
    <string name="profile_stats_title">Statistics</string>
    <string name="password_asterisks">********</string>
    <string name="modify_profile">Modify Your Profile</string>
    <string name="avatar_choose">Choose an avatar</string>
    <string name="avatar_selected">Selected avatar:</string>
    <string name="apply_changes">Apply changes</string>
    <string name="statistics">Statistics</string>
    <string name="games_played_title">Games played:</string>
    <string name="win_ratio_title">Win ratio:</string>
    <string name="avg_game_duration_title">Average game duration:</string>
    <string name="time_played_title">Time played:</string>
    <string name="time_played">Time played</string>
    <string name="best_solo_score_title">Best Solo Score:</string>
    <string name="connection_history_title">Connection history:</string>
    <string name="connection_history">Connection history</string>
    <string name="connection_title">Connection</string>
    <string name="disconnection_title">Disconnection</string>
    <string name="connected_at">Connected at </string>
    <string name="disconnected_at">Disconnected at </string>
    <string name="achievements">Achievements</string>
    <string name="achievements_lower">achievements</string>
    <string name="unlocked_message">You have unlocked</string>
    <string name="so_far_message">achievements so far</string>
    <string name="so_far_message_singular">achievement so far</string>
    <string name="obtained_title">Obtained:</string>
    <string name="match_history">Match History</string>
    <string name="match_details">Match Details</string>
    <string name="match_type_title">Match Type:</string>
    <string name="match_result_title">Result:</string>
    <string name="match_winner_title">Winner:</string>
    <string name="match_duration_title">Duration:</string>
    <string name="match_players_title">Players:</string>
    <string name="match_win">Win</string>
    <string name="match_loss">Loss</string>
    <string name="username_title">Username:</string>
    <string name="fragment_chat_send_message_button_text">Send</string>
    <string name="chat_user_joined_channel_message">%1$s has joined the channel</string>
    <string name="chat_user_left_channel_message">%1$s has left the channel</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_button_previous">Previous</string>
    <string name="tutorial_button_skip_tutorial">Skip Tutorial</string>
    <string name="tutorial_button_next">Next</string>
    <string name="tutorial_slide_welcome_01_title">Welcome</string>
    <string name="tutorial_slide_chat_01_title">Chat 1</string>
    <string name="preference_file_key">com.log3900.mobile.PREFERENCE_FILE_KEY</string>
    <string name="preference_file_userID_key">com.log3900.mobile.PREFERENCE_FILE_USERID_KEY</string>
    <string name="preference_file_username_key">com.log3900.mobile.PREFERENCE_FILE_USERNAME_KEY</string>
    <string name="preference_file_pictureid_key">com.log3900.mobile.PREFERENCE_FILE_PICTUREID_KEY</string>
    <string name="preference_file_email_key">com.log3900.mobile.PREFERENCE_FILE_EMAIL_KEY</string>
    <string name="preference_file_firstname_key">com.log3900.mobile.PREFERENCE_FILE_FIRSTNAME_KEY</string>
    <string name="preference_file_lastname_key">com.log3900.mobile.PREFERENCE_FILE_LASTNAME_KEY</string>
    <string name="preference_file_session_token_key">com.log3900.mobile.PREFERENCE_FILE_SESSION_TOKEN_KEY</string>
    <string name="preference_file_bearer_token_key">com.log3900.mobile.PREFERENCE_FILE_BEARER_TOKEN_KEY</string>
    <string name="preference_file_theme_key">com.log3900.mobile.PREFERENCE_FILE_THEME_KEY</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="settings_theme_title">Theme</string>
    <string name="language_english_title">English</string>
    <string name="language_french_title">French</string>
    <string name="language_system_title">System</string>
    <string name="theme_blue_yellow_title">Blue/Yellow</string>
    <string name="theme_brown_green_title">Brown/Green</string>
    <string name="theme_green_teal_title">Green/Teal</string>
    <string name="theme_indigo_orange_title">Indigo/Orange</string>
    <string name="theme_orange_light_blue_title">Orange/Light Blue</string>
    <string name="theme_purple_green_title">Purple/Green</string>
    <string name="theme_red_yellow_title">Red/Yellow</string>
    <string name="theme_teal_lime_title">Teal/Lime</string>
    <string name="fragment_match_lobby_title">Lobby</string>
    <string name="logout">Logout</string>
    <string name="create_match_button_title">Create match</string>
    <string name="create_match_dialog_title">Create match</string>
    <string name="create_match_dialog_match_name_hint">Match name</string>
    <string name="join_match_button_title">Join</string>
    <string name="difficulty_easy_title">Easy</string>
    <string name="difficulty_medium_title">Medium</string>
    <string name="difficulty_hard_title">Hard</string>
    <string name="match_mode_ffa_title">Free for all</string>
    <string name="match_mode_coop_title">Coop</string>
    <string name="match_mode_solo_title">Solo</string>
    <string name="match_lobby_mode_title">Mode</string>
    <string name="match_lobby_match_name_title">Match name</string>
    <string name="match_lobby_host_title">Host</string>
    <string name="dialog_create_match_max_players_title">Max players</string>
    <string name="dialog_create_match_rounds_title">Rounds</string>
    <string name="dialog_create_match_match_mode_title">Mode</string>
    <string name="dialog_create_match_difficulty_title">Difficulty</string>
    <string name="channel_list_title">Channels</string>
    <string name="chat_box_enter_message_title">Type your message...</string>
    <string name="match_waiting_room_match_name_title">Match name</string>
    <string name="match_waiting_room_match_mode_title">Mode</string>
    <string name="match_waiting_room_host_title">Host</string>
    <string name="match_waiting_room_players_title">Players</string>
    <string name="match_waiting_room_start_match_title">Start match</string>
    <string name="match_waiting_room_leave_match_title">Leave match</string>
    <string name="channel_available">Available</string>
    <string name="channel_joined">Joined</string>
    <string name="subscribe_to_channel_confirmation_text">You are not subscribed to channel %1$s. Would you like to subscribe to it?</string>
    <string name="unsubscribed_channel">Unsubscribed channel</string>
    <string name="delete_channel_title">Delete channel</string>
    <string name="delete_channel_confirmation">"Are you sure you want to delete channel %1$s? "</string>
    <string name="search_channel_hint">Search a channel</string>
    <string name="create_channel_dialog_title">Create a channel</string>
    <string name="create_channel_name_hint">Channel name</string>
    <string name="create">Create</string>
    <string name="settings">Settings</string>
    <string name="match_waiting_room_title">Match waiting room</string>
    <string name="word_to_draw_title">Word to draw:</string>
    <string name="guess">Guess</string>
    <string name="Round">Round</string>
    <string name="general_channel_name">General</string>
    <string name="game_channel_name">Active Match</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="dialog_create_match_language_title">Language</string>
    <string name="language">Language</string>
    <string name="difficulty">Difficulty</string>
    <string name="rounds">Rounds</string>
    <string name="round_end_info_word_was_sentence">The word was %1$s!</string>
    <string name="ffa_match_end_info_winner_is">The winner is %1$s!</string>
    <string name="turn">Turn</string>
    <string name="team_score_title">Team Score: %1$d</string>
    <string name="empty_slot">Empty slot</string>
    <string name="match_lobby_duration_title">Duration (minutes)</string>
    <string name="logout_lobby_confirm">You are about to logout. Do you wish to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quit_match">Quit</string>
    <string name="quit_match_confirm">You are about to quit the game in progress. Do you wish to continue?</string>
    <string name="quit_waiting_room">Quit</string>
    <string name="quit_waiting_room_confirm">You are about to quit the waiting room. Do you wish to continue?</string>
    <string name="kick_player_confirmation_title">Remove player</string>
    <string name="kick_player_confirmation_message">Are you sure you want to remove %1$s?</string>
    <string name="players">Players</string>
    <string name="drawer">Drawer</string>
    <string name="player">Player</string>
    <string name="ffa_match_end_inf_winner_is_you">You are the winner!</string>
    <string name="type_guess_instruction">Type your guess here</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="kick_from_group_dialog_message">You have been kicked from the match</string>
    <string name="host_left_group_dialog_message">The host has left the match!</string>
    <string name="language_picker_dialog_title">Language picker</string>
    <string name="you_guessed_correctly">You have guessed correctly!</string>
</resources>