<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_main_match_lobby_fragment"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/fragment_match_lobby_title" />

        <item
            android:id="@+id/navigation_main_profile_fragment"
            android:icon="@drawable/ic_person"
            android:title="@string/profile"/>

        <item
            android:id="@+id/navigation_main_draw_view_fragment"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="Draw (temp)"/>
        <item
            android:id="@+id/menu_item_activity_main_drawer_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout" />
    </group>

</menu>
