<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/MyTheme.DayNight"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/stats_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/statistics"
        style="@style/MyTheme.DayNight"
        android:textSize="30sp"
        android:drawableStart="@drawable/ic_show_chart_black_24dp"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/games_played_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games_played_title"
        style="@style/MyTheme.DayNight"
        android:layout_marginTop="8dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/stats_title"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/games_played_stat"
        style="@style/MyTheme.DayNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/games_played_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/games_played_text"
        app:layout_constraintTop_toTopOf="@+id/games_played_text" />

    <TextView
        android:id="@+id/win_ratio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win_ratio_title"
        style="@style/MyTheme.DayNight"
        android:layout_marginTop="8dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/games_played_text"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/win_ratio_stat"
        style="@style/MyTheme.DayNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/win_ratio_text"
        app:layout_constraintEnd_toEndOf="@+id/games_played_stat"
        app:layout_constraintStart_toStartOf="@+id/games_played_stat"
        app:layout_constraintTop_toTopOf="@+id/win_ratio_text" />

    <TextView
        android:id="@+id/avg_game_duration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avg_game_duration_title"
        style="@style/MyTheme.DayNight"
        android:layout_marginTop="8dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/win_ratio_text"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/avg_game_duration_stat"
        style="@style/MyTheme.DayNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/avg_game_duration_text"
        app:layout_constraintEnd_toEndOf="@+id/win_ratio_stat"
        app:layout_constraintStart_toStartOf="@+id/win_ratio_stat"
        app:layout_constraintTop_toTopOf="@+id/avg_game_duration_text" />

    <TextView
    android:id="@+id/time_played_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_played_title"
        style="@style/MyTheme.DayNight"
        android:layout_marginTop="8dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/avg_game_duration_text"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/time_played_stat"
        style="@style/MyTheme.DayNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/time_played_text"
        app:layout_constraintEnd_toEndOf="@+id/win_ratio_stat"
        app:layout_constraintStart_toStartOf="@+id/win_ratio_stat"
        app:layout_constraintTop_toTopOf="@+id/time_played_text" />

    <TextView
        android:id="@+id/best_solo_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_solo_score_title"
        style="@style/MyTheme.DayNight"
        android:layout_marginTop="8dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/time_played_text"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/best_solo_score_stat"
        style="@style/MyTheme.DayNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/best_solo_score_text"
        app:layout_constraintEnd_toEndOf="@+id/win_ratio_stat"
        app:layout_constraintStart_toStartOf="@+id/win_ratio_stat"
        app:layout_constraintTop_toTopOf="@+id/best_solo_score_text" />

    <TextView
        android:id="@+id/connection_history_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_history_title"
        style="@style/MyTheme.DayNight"
        android:layout_marginTop="16dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/best_solo_score_text"
        app:layout_constraintStart_toStartOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/connection_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all"
        app:layout_constraintBottom_toBottomOf="@+id/connection_history_text"
        app:layout_constraintEnd_toEndOf="@+id/win_ratio_stat"
        app:layout_constraintStart_toStartOf="@+id/win_ratio_stat"
        app:layout_constraintTop_toTopOf="@+id/connection_history_text"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>